# globus-compute

./: .dockerignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .wci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-endpoint  Dockerfile-endpoint-3.8  Dockerfile-worker  LICENSE  Makefile  README.md  README.rst  RELEASING.md  Untitled.ipynb  benc-build-dockers.sh  clean.sh  cmd_parsl.auto.1584844506.0867307.sh  cmd_parsl.auto.1584844517.734919.sh  cmd_parsl.auto.1584844518.2596505.sh  cmd_parsl.auto.1584844518.7839499.sh  cmd_parsl.auto.1584844519.3110914.sh  cmd_parsl.auto.1584844519.8367312.sh  cmd_parsl.auto.1584844520.8620923.sh  cmd_parsl.auto.1584844521.3372009.sh  cmd_parsl.auto.1584844521.9134526.sh  cmd_parsl.auto.1584844522.4379375.sh  cmd_parsl.auto.1584844523.113768.sh  cmd_parsl.auto.1584844523.6894062.sh  cmd_parsl.auto.1584844524.4652069.sh  cmd_parsl.auto.1584844524.9400344.sh  cmd_parsl.auto.1584844525.5655742.sh  cmd_parsl.auto.1584844526.0921278.sh  cmd_parsl.auto.1584844526.616902.sh  cmd_parsl.auto.1584844527.1411583.sh  (+10 more)
compute_sdk/: .coveragerc  PyPI.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
compute_sdk/globus_compute_sdk/: __init__.py  version.py
compute_sdk/globus_compute_sdk/errors/: __init__.py  error_types.py
compute_sdk/globus_compute_sdk/sdk/: _environments.py  bash_function.py  batch.py  client.py  compute_dir.py  container_spec.py  diagnostic.py  executor.py  hardware_report.py  mpi_function.py  shell_function.py  web_client.py
compute_sdk/globus_compute_sdk/serialize/: __init__.py  base.py  concretes.py  facade.py  utils.py
compute_sdk/parsl/app/: errors.py
compute_sdk/tests/: conftest.py
compute_sdk/tests/integration/: test_executor_int.py  test_serialization.py  test_web_client_exceptions.py
compute_sdk/tests/unit/: conftest.py  test_atomiccontroller.py  test_batch.py  (+21 more)
(+1327 files in other folders)
